# design-setup-bp

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  report.md
are-bp/: CMakeLists.txt
are-bp/conf/: config.ini  hand_sequences.ini
data-analysis/nominal-pose/: target_list.txt
data-analysis/robustness/: target_list.txt
data-analysis/scripts/: assessRobustness.m  collect-poses-nominal.sh  collect-poses-robustness.sh  computeErrors.m  generatePoses.m  runNominalAnalysis.m  runSensitivityAnalysis.m
gazebo/: CMakeLists.txt
gazebo/models/BP_cube/: BP_cube.sdf  model.config
gazebo/models/BP_table/: BP_table.sdf  model.config
gazebo/worlds/: BP-setup-drop.world  BP-setup.world
models/: CMakeLists.txt
models/design-setup-bp/robots/BP_table/: BP_table.sdf  model.config
models/design-setup-bp/robots/BP_table/meshes/: BP_table.stl
models/gazebo/worlds/: BP-setup-drop.world  BP-setup.world
models/setup-gazebo-bp/robots/BP_cube/: BP_cube.sdf  model.config
models/setup-gazebo-bp/robots/BP_table/: BP_table.sdf
models/setup-gazebo-bp/robots/BP_table/meshes/: BP-table-16cmhigher.stl  BP-table-8cmhigher.stl  BP_table.stl
scripts/: CMakeLists.txt  actionsRenderingEngineGazeboBP.xml  actionsRenderingEngineSim.xml  bp-run-drop.sh  bp-run-experiment.sh  experiment.xml  run-drop.sh  run-experiment.sh
